force-app/main/default/objects/EducationalQualification__c/fields/branchTwelth__c.field-meta.xml
<CustomField>
    <fullName>EQ_branchTwelth__c</fullName>
    <label>EQ_branchTwelth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Arts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>