force-app/main/default/objects/EducationalQualification__c/fields/marksType__c.field-meta.xml
<CustomField>
    <fullName>EQ_marksType__c</fullName>
    <label>EQ_marksType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CGPA</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>