force-app/main/default/objects/EducationalQualification__c/fields/postGradDegree__c.field-meta.xml
<CustomField>
    <fullName>EQ_postGradDegree__c</fullName>
    <label>EQ_postGradDegree</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master Of Engineering</fullName>
            </value>
            <value>
                <fullName>Master Of Technology</fullName>
            </value>
            <value>
                <fullName>Master Of Computer Applications</fullName>
            </value>
            <value>
                <fullName>Master Of Science</fullName>
            </value>
            <value>
                <fullName>Master Of Arts</fullName>
            </value>
            <value>
                <fullName>Master Of Commerce</fullName>
            </value>
            <value>
                <fullName>Master Of Business Administration</fullName>
            </value>
            <value>
                <fullName>Master Of Architecture</fullName>
            </value>
            <value>
                <fullName>Master Of Laws</fullName>
            </value>
            <value>
                <fullName>Master Of Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>