force-app/main/default/objects/EducationalQualification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EQ_schoolOrCollegeName__c</columns>
    <columns>EQ_percentageMarks__c</columns>
    <columns>EQ_educationalLevel__c</columns>
    <columns>EqTo_c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>